# python-project-52

./: .codeclimate.yml  .env.sample  .gitignore  Makefile  README.md  build.sh  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: check_lint_and_tests.yml  run_tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
static_root/prod/: staticfiles.json
staticfiles/: staticfiles.json
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py  0003_alter_status_options.py
task_manager/tasks/: fields.py  filter.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_alter_task_creator_alter_task_description_and_more.py  0004_alter_task_created_at.py  0005_tasksrelotionlabels_task_labels.py  0006_alter_task_labels.py  0007_tasksrelationlabels_delete_tasksrelotionlabels_and_more.py
task_manager/templates/: base.html  delete_form.html  form.html  index.html  login_form.html
task_manager/templates/labels/: index.html
task_manager/tests/: dump_data.json  parser_dump_data.py  test_labels.py  test_mixins.py  test_statuses.py  test_tasks.py  test_users.py  test_views.py  tests_statuses.py  tests_users.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
(+21 files in other folders)
