[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["GrigoriyKruchinin <GrigoriyKruchinin>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "^4.2.7"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
